hierarchal model addition

--- a/references.bib
+++ b/references.bib
@@ -199,6 +199,22 @@
   issn = {0022-0515},
   url = {https://uoelibrary.idm.oclc.org/login?url=https://www.proquest.com/scholarly-journals/event-studies-economics-finance/docview/213164851/se-2}
 },
+@article{GMPartner,
+  url = {https://www.reuters.com/markets/us/gm-launches-new-credit-card-with-goldman-sachs-2022-01-10/}
+},
+@article{ApplePartner,
+  url = {https://www.bloomberg.com/news/articles/2020-09-15/apple-ends-barclays-credit-card-partnership-ahead-of-new-devices?leadSource=uverify%20wall}
+},
+@article{Wayfair,
+  url = {https://www.citigroup.com/global/news/press-release/2020/citi-retail-services-and-wayfair-announce-new-strategic-partnership-with-launch-of-private-label-and-co-brand-credit-cards}
+},
+@article{HSBCPort,
+  url = {https://wallethub.com/edu/cc/hsbc-credit-cards-become-capital-one-credit-cards/25661}
+},
+@article{BestBuyPartner,
+  url = {https://news.yahoo.com/citigroup-moves-best-buy-credit-165042624.html}
+}
+
 
 
 #Hierarchical modeling and analysis for spatial data
